--- a/vignettes/eda-pmxhelpr.Rmd
+++ b/vignettes/eda-pmxhelpr.Rmd
@@ -184,7 +184,7 @@ We can also generate dose-normalized concentration-time plots by specifying `dos
 
 ```{r plot-dvtime-dn, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Dose-normalized Concentration (ng/mL/mg Drug)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", xlab = "Time (hours)", log_y = TRUE,
             dosenorm = TRUE) +
   scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)+
@@ -196,7 +196,7 @@ When `dosenorm = TRUE`, the variable `DOSE` needs to be present in the input dat
 ```{r plot-dvtime-dn-nodose, fig.height=4, fig.width=6, message=TRUE, warning=TRUE, error=TRUE}
 plot_dvtime(select(plot_data, -DOSE), 
             dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Dose-normalized Concentration (ng/mL/mg Drug)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", xlab = "Time (hours)", log_y = TRUE,
             dosenorm = TRUE) +
   scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)+
@@ -207,7 +207,7 @@ Dose-normalization is performed *AFTER* BLQ imputation in the case in which both
 
 ```{r plot-dvtime-blq-dn, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "mean",
-            ylab = "Dose-normalized Concentration (ng/mL/mg Drug)", xlab = "Time (hours)", log_y = TRUE,
+            ylab = "Dose-normalized Conc. (ng/mL per mg Drug)", xlab = "Time (hours)", log_y = TRUE,
             loq_method = 2, dosenorm = TRUE) +
   scale_x_continuous(breaks = seq(0,168,24))+
   facet_wrap(~PART)+
@@ -234,9 +234,9 @@ We can plot an individual subject by filtering the input dataset. This could be 
 
 ```{r plot-dvtime-blq2-indplots, fig.height=4, fig.width=6, message=FALSE, warning=FALSE}
 ids <- sort(unique(plot_data$ID))
-plotlist<- list()
+plist<- list()
 for(i in 1:length(ids)){
-  plotlist[[i]] <- plot_dvtime(filter(plot_data, ID == ids[i]), 
+  plist[[i]] <- plot_dvtime(filter(plot_data, ID == ids[i]), 
                                dv_var = c(DV = "ODV"), col_var = "Dose (mg)", cent = "none",
             ylab = "Concentration (ng/mL)", xlab = "Time (hours)", log_y = TRUE,
             ind_dv = TRUE,
@@ -249,11 +249,14 @@ for(i in 1:length(ids)){
 }
 
 
-groups <- length(plotlist)/4
+groups <- length(plist)/4
+grpplist <- list()
 for(grp in 1:groups){
   i <- (grp-1)*4+1
   j <- grp*4
-  plist <- plotlist[i:j]
-  patchwork::wrap_plots(plist)
+  tmplist <- plist[i:j]
+  grpplist[[grp]] <- wrap_plots(tmplist)
 }
+
+grpplist
 ```
